<resources>
    <string name="app_name">EarnQuizMoney</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_fill_valid_mobile_number">Please Fill Valid Mobile Number</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="please_verify_otp">Please Verify Otp</string>
    <string name="otp_verified_successfully">Otp Verified Successfully</string>
    <string name="name_required">Name Required</string>
    <string name="please_provide_mobile_number">Please Provide Mobile Number</string>
    <string name="please_provide_email">Please Provide Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="name_required_">Name Required</string>
    <string name="please_verify_all_otp">Please Verify All OTP</string>
    <string name="records_not_found">Records Not Found</string>
    <string name="live_games">Live Games</string>
    <string name="add_money">Add Money</string>
    <string name="wallet">Wallet</string>
    <string name="withdraw">Withdraw</string>
    <string name="how_to_play">How To Play</string>
    <string name="support">Support</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="please_verify_mobile_otp">Please Verify Mobile</string>
    <string name="please_verify_email_otp">Please Verify Email</string>
    <string name="sign_up_successfully">Sign Up Successfull</string>
    <string name="error_in_sign_up">Error in Sign Up</string>
    <string name="response_body_is_null">Response body is null</string>
    <string name="response_not_successful">Response not successful</string>
    <string name="email_already_registered">Email Already Registered</string>
    <string name="mobile_number_already_registered">Mobile Number Already Registered</string>
    <string name="web_client_id">359067630998-50snnsn3sdlajvt65gt3kmpsa8pfjgiu.apps.googleusercontent.com</string>
    <string name="otp_sent_successfully">Otp Sent Successfully</string>
    <string name="Sign_Up_Successful">Sign Up Successful</string>
    <string name="wallet_transactions">Wallet Transactions</string>
    <string name="no_upcoming_contest_to_show_soon_we_will_be_announcing_the_one">No Upcoming contest to show</string>
    <string name="time">Time</string>
    <string name="error_message_id">First Completed Quiz</string>
    <string name="text_message">Do u Really Want to Submit the Quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="congratulation">The Quiz has Been Submitted! Stay tuned for your results and keep challenging yourself to learn more.</string>
    <string name="no_more_questions">No more questions</string>
    <string name="select_an_answer">Please select an answer</string>
    <string name="quiz_completed">Quiz Completed</string>
    <string name="correct_answer">Correct Answer!</string>
    <string name="wrong_answer">Wrong Answer!</string>
    <string name="score_updated">Score Updated Successfully</string>
    <string name="failed_to_update_score">Failed To Update Score</string>
    <string name="no_data_found">No Data Found</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="upi_details">UPI Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="name_on_bank_required">Name on bank is required</string>
    <string name="bank_name_required">Bank name is required</string>
    <string name="account_number_required">Account number is required</string>
    <string name="ifsc_code_required">IFSC code is Required</string>
    <string name="choose_image_from_your_device_png_jpg_jpeg">*choose image from your device(.png,.jpg,.jpeg)</string>
</resources>