<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/round_button">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:background="@color/grey"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_message_maintain"
                android:text="@string/text_message"
                android:layout_gravity="start"
                android:textSize="8pt"
                android:ellipsize="end"
                android:textStyle="bold"
                android:layout_marginVertical="5pt"
                android:gravity="center"
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12pt"
                android:orientation="horizontal"
                android:layout_gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/ok"
                android:background="@drawable/greenbutton"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20sp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/no"
                android:background="@drawable/round_button"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20sp"
                />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>